@@ -218,6 +218,9 @@ class CallasDonnerhackeFinneyShawThayerRFC4880
 			(const tmcg_byte_t tag, tmcg_octets_t &out); 
 		static void PacketLengthEncode
 			(const size_t len, tmcg_octets_t &out);
+		static size_t PacketLengthDecode
+			(const tmcg_octets_t &in, bool newformat, tmcg_byte_t lentype,
+			size_t &len, size_t &partlen);
 		static void PacketTimeEncode
 			(const time_t in, tmcg_octets_t &out);
 		static void PacketTimeEncode
